force-app/main/default/objects/Fee_Schedule__c/Fee_Schedule__c.object-meta.xml
<CustomObject>
    <description>contains the rules that define fees that may be due</description>
    <label>Fee Schedule</label>
    <nameField>
        <displayFormat>FS-{0000}</displayFormat>
        <label>Fee Schedule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fee Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>