force-app/main/default/objects/Fee_Schedule__c/fields/Calculation_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Formula__c</fullName>
    <inlineHelpText>Flat Fee Record Type: simple decimal number (xxxx.xx)
Per x Record Type: {Custom_Field__c}*[xxxx.xx]
Percent Record Type: {Custom_Field__c}*[20/100]</inlineHelpText>
    <label>Calculation Formula</label>
    <type>TextArea</type>
</CustomField>