force-app/main/default/objects/Fee_Schedule__c/fields/Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>Fee_Type__c</fullName>
    <description>What type of Fee is being logged</description>
    <label>Fee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exam Fee</fullName>
            </value>
            <value>
                <fullName>Registration Fee</fullName>
            </value>
            <value>
                <fullName>Assessment Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>