force-app/main/default/objects/Fee_Schedule__c/fields/Range_Ceiling__c.field-meta.xml
<CustomField>
    <fullName>Range_Ceiling__c</fullName>
    <label>Range Ceiling</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>