force-app/main/default/objects/Fee_Schedule__c/fields/Reference_Field__c.field-meta.xml
<CustomField>
    <fullName>Reference_Field__c</fullName>
    <label>Reference Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>