force-app/main/default/objects/Fee_Schedule__c/recordTypes/Flat_Fee.recordType-meta.xml
<RecordType>
    <fullName>Flat_Fee</fullName>
    <active>true</active>
    <label>Flat Fee</label>
</RecordType>