force-app/main/default/objects/Fee_Schedule__c/recordTypes/Per_x.recordType-meta.xml
<RecordType>
    <fullName>Per_x</fullName>
    <active>true</active>
    <label>Per x</label>
</RecordType>