force-app/main/default/objects/Fee_Schedule__c/recordTypes/Percent.recordType-meta.xml
<RecordType>
    <fullName>Percent</fullName>
    <active>true</active>
    <label>Percent</label>
</RecordType>