force-app/main/default/objects/Fee_Schedule__c/recordTypes/Range.recordType-meta.xml
<RecordType>
    <fullName>Range</fullName>
    <active>true</active>
    <label>Range</label>
</RecordType>