force-app/main/default/objects/Fee_Schedule__c/validationRules/Reference_Field_reqd_for_Range_Percent.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Field_reqd_for_Range_Percent</fullName>
    <active>true</active>
    <description>Reference_Field__c must have a value for record types Range and Percent</description>
    <errorConditionFormula>AND(
ISBLANK( Reference_Field__c ),

RecordType.Name = &quot;Range&quot;
)</errorConditionFormula>
    <errorMessage>Reference Field is required for Range fee types.</errorMessage>
</ValidationRule>