force-app/main/default/objects/Fee_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Calculation_Formula__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Registration_Type__c</columns>
    <columns>Initiation_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>